--- a/html/index.html
+++ b/html/index.html
@@ -9,13 +9,13 @@
     <title>Fundación conocete a ti mismo</title>
     <link rel="icon" href="../assets/LogoF.png">
 </head>
-<header>
-    <nav class="header">
+<header class="header">
+    <nav class="nav-header">
         <a href="#" class="header-logo">
             <img  src="../assets/LogoF.png" alt="logo" class="header-icon">
         </a>
         <ul class="menu">
-            <li><a href="#us">Nosotros</a></li>
+            <li><a href="#us">Conocenos</a></li>
             <li><a href="#programs"></a>Programas</a></li>
             <li><a href="#"></a></li>
             <li><a href="#contact"></a>Contactanos</a></li>
